# qreviews

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  nixpacks.toml  pyproject.toml  railway.json
deploy/: com.mozilla.qreviews.plist  install-launchd.sh  uninstall-launchd.sh
docs/: STYLE.md
qreviews/: __init__.py  __main__.py  conduit.py  config.py  diff_analysis.py  json_utils.py  metrics.py  poller.py  poster.py  pricing.py  review.py  scoring.py  searchfox.py  skills.py  state.py  test_coverage.py  webhook.py
qreviews/dashboard/: app.py
qreviews/dashboard/templates/: index.html
qreviews/dashboard/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
qreviews/dashboard/web/src/: App.tsx  ThemeProvider.tsx  api.ts  main.tsx  theme.ts  types.ts
qreviews/dashboard/web_dist/: index.html
scripts/: railway_start.sh  review_one.py
skills/accessibility-frontend-review/: SKILL.md
skills/application-update-review/: SKILL.md
skills/backup-reviewers-rotation-review/: SKILL.md
skills/browser-installer-review/: SKILL.md
skills/desktop-theme-review/: SKILL.md
skills/home-newtab-review/: SKILL.md
skills/ip-protection-review/: SKILL.md
skills/new-tab-page-review/: SKILL.md
skills/review-using-docs/: SKILL.md
tests/: conftest.py  test_conduit.py  test_config.py  test_diff_analysis.py  test_metrics.py  test_poller.py  test_poster.py  test_review.py  test_scoring.py  test_searchfox.py  test_skills.py  test_state.py  test_test_coverage.py  test_webhook.py
(+46 files in other folders)
